@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Replace `nikola new_post (-p)` with `nikola new (post|page)` (Issue #1060)
 * Add link://filename/foo/bar.rst syntax to refer to the post generated from foo/bar.rst (Issue #1035)
 * Fix filename encodings in WordPress imports (Issue #1053)
 * Log messages are colorized (colorama is required under Windows) (Issue #1044)
